fixing teaching on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,6 @@ p {
 
 table {
     font-size: 11.8pt;
-    font-weight: lighter;
     width: 85%;
     max-width: 900pt;
     margin-left: 5%;
